Added basic CSV parser+tests (#230)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -276,6 +276,8 @@ add_library(osccore STATIC
     src/Bindings/Gl.hpp
     src/Bindings/GlGlm.hpp
 
+    src/Formats/CSV.hpp
+    src/Formats/CSV.cpp
     src/Formats/DAE.hpp
     src/Formats/DAE.cpp
 
@@ -634,6 +636,7 @@ target_link_options(osccore PUBLIC
 # osctests: main exe that links to `osccore` and exercises APIs etc.
 add_executable(testosc EXCLUDE_FROM_ALL
 
+    tests/TestCSV.cpp
     tests/TestDedupedString.cpp
     tests/TestImage.cpp
     tests/TestOpenSim.cpp
