--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -641,6 +641,7 @@ add_executable(testosc EXCLUDE_FROM_ALL
     tests/TestAlgorithms.cpp
     tests/TestCSV.cpp
     tests/TestDedupedString.cpp
+    tests/TestForwardDynamicSimulation.cpp
     tests/TestImage.cpp
     tests/TestOpenSim.cpp
     tests/TestOpenSimHelpers.cpp
