Updated base ImGui config (#437)

--- a/resources/imgui_base_config.ini
+++ b/resources/imgui_base_config.ini
@@ -1,6 +1,6 @@
 [Window][DockSpaceViewport_11111111]
 Pos=0,48
-Size=1920,1009
+Size=1920,979
 Collapsed=0
 
 [Window][Debug##Default]
@@ -9,8 +9,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Splash screen]
-Pos=610,302
-Size=700,500
+Pos=640,333
+Size=640,512
 Collapsed=0
 
 [Window][Loading message]
@@ -19,8 +19,8 @@ Size=682,67
 Collapsed=0
 
 [Window][render]
-Pos=355,48
-Size=1565,1009
+Pos=0,48
+Size=1920,811
 Collapsed=0
 DockId=0x00000004,0
 
@@ -34,49 +34,49 @@ DockId=0x0000001B,0
 Pos=1523,19
 Size=397,558
 Collapsed=0
-DockId=0x0000000B,0
+DockId=0x0000001F,0
 
 [Window][Outputs]
 Pos=1548,48
 Size=372,1009
 Collapsed=0
-DockId=0x00000011,0
+DockId=0x00000010,0
 
 [Window][Utils]
 Pos=1523,19
 Size=397,558
 Collapsed=0
-DockId=0x0000000B,2
+DockId=0x0000001F,2
 
 [Window][Moment Arms]
 Pos=1523,19
 Size=397,558
 Collapsed=0
-DockId=0x0000000B,3
+DockId=0x0000001F,3
 
 [Window][Selection]
 Pos=0,507
 Size=292,419
 Collapsed=0
-DockId=0x0000000B,0
+DockId=0x0000001F,0
 
 [Window][Coordinates]
-Pos=1523,19
-Size=397,558
+Pos=0,48
+Size=337,534
 Collapsed=0
-DockId=0x0000000B,4
+DockId=0x0000001F,1
 
 [Window][Simulate]
 Pos=1523,19
 Size=397,558
 Collapsed=0
-DockId=0x0000000B,5
+DockId=0x0000001F,5
 
 [Window][UI]
 Pos=0,19
 Size=397,1117
 Collapsed=0
-DockId=0x0000000B,5
+DockId=0x0000001F,5
 
 [Window][Error loading]
 Pos=60,60
@@ -93,13 +93,13 @@ DockId=0x00000004,1
 Pos=0,620
 Size=353,517
 Collapsed=0
-DockId=0x0000000B,1
+DockId=0x0000001F,1
 
 [Window][Snapshots]
 Pos=1523,0
 Size=397,568
 Collapsed=0
-DockId=0x0000000B,1
+DockId=0x0000001F,1
 
 [Window][Actions]
 Pos=355,832
@@ -113,14 +113,14 @@ Size=1647,360
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=650,20
+Pos=650,45
 Size=550,680
 Collapsed=0
 
 [Window][##render]
 Size=1920,1136
 Collapsed=0
-DockId=0x0000000B,0
+DockId=0x0000001F,0
 
 [Window][render1]
 Pos=364,19
@@ -214,14 +214,14 @@ Size=512,375
 Collapsed=0
 
 [Window][viewer0]
-Pos=325,48
-Size=1255,1009
+Pos=339,48
+Size=1581,787
 Collapsed=0
 DockId=0x00000004
 
 [Window][Log]
-Pos=355,861
-Size=1565,196
+Pos=339,837
+Size=1581,190
 Collapsed=0
 DockId=0x0000000A,1
 
@@ -231,8 +231,8 @@ Size=512,787
 Collapsed=0
 
 [Window][viewer1]
-Pos=1095,48
-Size=825,782
+Pos=588,48
+Size=620,787
 Collapsed=0
 DockId=0x00000006
 
@@ -252,13 +252,13 @@ DockId=0x0000000F
 Pos=1548,654
 Size=372,546
 Collapsed=0
-DockId=0x00000012
+DockId=0x00000010
 
 [Window][Simulation Details]
-Pos=1548,19
-Size=372,633
+Pos=1523,555
+Size=397,502
 Collapsed=0
-DockId=0x00000011,1
+DockId=0x00000012,0
 
 [Window][Loading Message]
 Pos=704,248
@@ -306,17 +306,17 @@ DockId=0x0000001B,1
 Pos=0,48
 Size=322,1009
 Collapsed=0
-DockId=0x00000016,0
+DockId=0x00000015,0
 
 [Window][wizard_3dViewer]
-Pos=324,48
-Size=1596,1009
+Pos=269,48
+Size=1651,1009
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][history]
-Pos=0,573
-Size=322,484
+Pos=0,555
+Size=267,502
 Collapsed=0
 DockId=0x00000018,0
 
@@ -332,14 +332,16 @@ Collapsed=0
 DockId=0x0000001A,0
 
 [Window][MusclePlot_1]
-Pos=363,179
-Size=460,438
+Pos=1210,48
+Size=311,979
 Collapsed=0
+DockId=0x00000022,2
 
 [Window][MusclePlot_2]
-Pos=954,168
-Size=458,370
+Pos=1210,48
+Size=311,979
 Collapsed=0
+DockId=0x00000022,1
 
 [Window][MusclePlot_3]
 Pos=60,60
@@ -352,47 +354,122 @@ Size=453,431
 Collapsed=0
 
 [Window][Selection Details]
-Pos=0,599
-Size=323,458
+Pos=0,48
+Size=299,540
 Collapsed=0
 DockId=0x0000001C,0
 
 [Window][Output Watches]
-Pos=1582,48
-Size=338,1009
+Pos=1210,48
+Size=311,979
 Collapsed=0
-DockId=0x0000001E,0
+DockId=0x00000022,0
+
+[Window][Navigator]
+Pos=0,48
+Size=337,534
+Collapsed=0
+DockId=0x0000001F,0
+
+[Window][Properties]
+Pos=0,584
+Size=337,443
+Collapsed=0
+DockId=0x00000020,0
+
+[Window][Performance]
+Pos=1523,48
+Size=397,979
+Collapsed=0
+DockId=0x00000011,0
+
+[Window][Output Plots]
+Pos=1523,48
+Size=397,505
+Collapsed=0
+DockId=0x00000011,0
+
+[Window][navigator]
+Pos=0,48
+Size=267,505
+Collapsed=0
+DockId=0x00000016,0
+
+[Window][window]
+Pos=65,130
+Size=442,274
+Collapsed=0
+
+[Window][ImPlot Demo]
+Pos=463,175
+Size=600,750
+Collapsed=0
+
+[Window][controls]
+Pos=60,60
+Size=398,308
+Collapsed=0
+
+[Window][perf]
+Pos=29,454
+Size=621,584
+Collapsed=0
+DockId=0x00000025,1
+
+[Window][viewer]
+Pos=60,60
+Size=689,634
+Collapsed=0
+
+[Window][log]
+Pos=29,454
+Size=621,584
+Collapsed=0
+DockId=0x00000025,0
+
+[Window][Tutorial Step]
+Pos=36,143
+Size=324,616
+Collapsed=0
+DockId=0x00000025,0
 
 [Docking][Data]
-DockSpace                     ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,48 Size=1920,1009 Split=X Selected=0x945C996A
-  DockNode                    ID=0x0000001D Parent=0x8B93E3BD SizeRef=1580,1009 Split=X
-    DockNode                  ID=0x00000015 Parent=0x0000001D SizeRef=322,1118 Split=Y Selected=0xFA7A28AE
-      DockNode                ID=0x00000016 Parent=0x00000015 SizeRef=322,523 Selected=0xFA7A28AE
-      DockNode                ID=0x00000018 Parent=0x00000015 SizeRef=322,484 Selected=0x27BA704B
-    DockNode                  ID=0x00000017 Parent=0x0000001D SizeRef=1596,1118 Split=X
-      DockNode                ID=0x00000013 Parent=0x00000017 SizeRef=366,1200 HiddenTabBar=1 Selected=0x4E70EF18
-      DockNode                ID=0x00000014 Parent=0x00000017 SizeRef=1552,1200 Split=X
-        DockNode              ID=0x0000000E Parent=0x00000014 SizeRef=1546,1181 Split=X
-          DockNode            ID=0x00000001 Parent=0x0000000E SizeRef=323,1117 Split=Y Selected=0x788BAA0D
-            DockNode          ID=0x00000003 Parent=0x00000001 SizeRef=362,599 Split=Y Selected=0xAA7FB072
-              DockNode        ID=0x00000019 Parent=0x00000003 SizeRef=353,537 Split=Y Selected=0x788BAA0D
-                DockNode      ID=0x0000001B Parent=0x00000019 SizeRef=284,549 Selected=0x788BAA0D
-                DockNode      ID=0x0000001C Parent=0x00000019 SizeRef=284,458 Selected=0x4EEF2531
-              DockNode        ID=0x0000001A Parent=0x00000003 SizeRef=353,470 Selected=0x27CF05AC
-            DockNode          ID=0x0000000B Parent=0x00000001 SizeRef=362,517 HiddenTabBar=1 Selected=0x16244C15
-          DockNode            ID=0x00000002 Parent=0x0000000E SizeRef=1255,1117 Split=Y
-            DockNode          ID=0x00000009 Parent=0x00000002 SizeRef=1066,950 Split=Y Selected=0x945C996A
-              DockNode        ID=0x00000007 Parent=0x00000009 SizeRef=1157,916 Split=X Selected=0xEFD926F6
-                DockNode      ID=0x00000004 Parent=0x00000007 SizeRef=738,916 CentralNode=1 HiddenTabBar=1 Selected=0xEFD926F6
-                DockNode      ID=0x00000005 Parent=0x00000007 SizeRef=825,916 Split=Y Selected=0x98DE1660
-                  DockNode    ID=0x00000006 Parent=0x00000005 SizeRef=768,443 HiddenTabBar=1 Selected=0x98DE1660
-                  DockNode    ID=0x0000000C Parent=0x00000005 SizeRef=768,471 Split=X Selected=0x01D747DA
-                    DockNode  ID=0x0000000D Parent=0x0000000C SizeRef=384,471 HiddenTabBar=1 Selected=0x01D747DA
-                    DockNode  ID=0x0000000F Parent=0x0000000C SizeRef=382,471 HiddenTabBar=1 Selected=0x76D0774C
-              DockNode        ID=0x00000008 Parent=0x00000009 SizeRef=1157,32 HiddenTabBar=1 Selected=0xCAF5C873
-            DockNode          ID=0x0000000A Parent=0x00000002 SizeRef=1066,229 HiddenTabBar=1 Selected=0xB7722E25
-        DockNode              ID=0x00000010 Parent=0x00000014 SizeRef=372,1181 Split=Y Selected=0x1A64C361
-          DockNode            ID=0x00000011 Parent=0x00000010 SizeRef=372,633 Selected=0xC3C896C0
-          DockNode            ID=0x00000012 Parent=0x00000010 SizeRef=372,546 HiddenTabBar=1 Selected=0x5A8E322E
-  DockNode                    ID=0x0000001E Parent=0x8B93E3BD SizeRef=338,1009 Selected=0x6B2393A4
+DockNode                          ID=0x00000025 Pos=29,454 Size=621,584 Selected=0xBDBFA952
+DockSpace                         ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,48 Size=1920,979 Split=X Selected=0x945C996A
+  DockNode                        ID=0x0000001D Parent=0x8B93E3BD SizeRef=267,1009 Split=Y Selected=0x69B4C9F1
+    DockNode                      ID=0x00000016 Parent=0x0000001D SizeRef=229,505 Selected=0x69B4C9F1
+    DockNode                      ID=0x00000018 Parent=0x0000001D SizeRef=229,502 Selected=0x27BA704B
+  DockNode                        ID=0x00000023 Parent=0x8B93E3BD SizeRef=1651,1009 Split=X
+    DockNode                      ID=0x0000001E Parent=0x00000023 SizeRef=1521,1009 Split=X
+      DockNode                    ID=0x00000021 Parent=0x0000001E SizeRef=1525,979 Split=X
+        DockNode                  ID=0x00000015 Parent=0x00000021 SizeRef=322,1118 Selected=0xFA7A28AE
+        DockNode                  ID=0x00000017 Parent=0x00000021 SizeRef=1596,1118 Split=X
+          DockNode                ID=0x00000013 Parent=0x00000017 SizeRef=366,1200 HiddenTabBar=1 Selected=0x4E70EF18
+          DockNode                ID=0x00000014 Parent=0x00000017 SizeRef=1552,1200 Split=X
+            DockNode              ID=0x0000000E Parent=0x00000014 SizeRef=1546,1181 Split=X
+              DockNode            ID=0x00000001 Parent=0x0000000E SizeRef=337,1117 Split=Y Selected=0x788BAA0D
+                DockNode          ID=0x00000003 Parent=0x00000001 SizeRef=362,599 Split=Y Selected=0xAA7FB072
+                  DockNode        ID=0x00000019 Parent=0x00000003 SizeRef=353,537 Split=Y Selected=0x788BAA0D
+                    DockNode      ID=0x0000001B Parent=0x00000019 SizeRef=284,549 Selected=0x788BAA0D
+                    DockNode      ID=0x0000001C Parent=0x00000019 SizeRef=284,458 Selected=0x4EEF2531
+                  DockNode        ID=0x0000001A Parent=0x00000003 SizeRef=353,470 Selected=0x27CF05AC
+                DockNode          ID=0x0000000B Parent=0x00000001 SizeRef=362,517 Split=Y Selected=0x1E8A59A1
+                  DockNode        ID=0x0000001F Parent=0x0000000B SizeRef=393,534 Selected=0x1E8A59A1
+                  DockNode        ID=0x00000020 Parent=0x0000000B SizeRef=393,443 Selected=0xC89E3217
+              DockNode            ID=0x00000002 Parent=0x0000000E SizeRef=1581,1117 Split=Y
+                DockNode          ID=0x00000009 Parent=0x00000002 SizeRef=1066,950 Split=Y Selected=0x945C996A
+                  DockNode        ID=0x00000007 Parent=0x00000009 SizeRef=1157,916 Split=X Selected=0xEFD926F6
+                    DockNode      ID=0x00000004 Parent=0x00000007 SizeRef=600,916 CentralNode=1 HiddenTabBar=1 Selected=0xEFD926F6
+                    DockNode      ID=0x00000005 Parent=0x00000007 SizeRef=620,916 Split=Y Selected=0x98DE1660
+                      DockNode    ID=0x00000006 Parent=0x00000005 SizeRef=768,443 HiddenTabBar=1 Selected=0x98DE1660
+                      DockNode    ID=0x0000000C Parent=0x00000005 SizeRef=768,471 Split=X Selected=0x01D747DA
+                        DockNode  ID=0x0000000D Parent=0x0000000C SizeRef=384,471 HiddenTabBar=1 Selected=0x01D747DA
+                        DockNode  ID=0x0000000F Parent=0x0000000C SizeRef=382,471 HiddenTabBar=1 Selected=0x76D0774C
+                  DockNode        ID=0x00000008 Parent=0x00000009 SizeRef=1157,32 HiddenTabBar=1 Selected=0xCAF5C873
+                DockNode          ID=0x0000000A Parent=0x00000002 SizeRef=1066,229 HiddenTabBar=1 Selected=0xB7722E25
+            DockNode              ID=0x00000010 Parent=0x00000014 SizeRef=372,1181 HiddenTabBar=1 Selected=0x1A64C361
+      DockNode                    ID=0x00000022 Parent=0x0000001E SizeRef=393,979 Selected=0xE9337EF5
+    DockNode                      ID=0x00000024 Parent=0x00000023 SizeRef=397,1009 Split=Y Selected=0xCA5A0F8B
+      DockNode                    ID=0x00000011 Parent=0x00000024 SizeRef=397,505 Selected=0x044B1956
+      DockNode                    ID=0x00000012 Parent=0x00000024 SizeRef=397,502 Selected=0x1A64C361
 
