Created seperate UI for showing annotations (#115)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -485,6 +485,8 @@ add_library(osccore STATIC
     src/Tabs/ModelEditorTab.hpp
     src/Tabs/PerformanceAnalyzerTab.cpp
     src/Tabs/PerformanceAnalyzerTab.hpp
+    src/Tabs/ScreenshotTab.cpp
+    src/Tabs/ScreenshotTab.hpp
     src/Tabs/SimulatorTab.cpp
     src/Tabs/SimulatorTab.hpp
     src/Tabs/SplashTab.cpp
