Added Window menu to TPS3D (#467)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -603,6 +603,7 @@ add_library(osccore STATIC
     src/Widgets/UndoButton.hpp
     src/Widgets/UndoRedoPanel.cpp
     src/Widgets/UndoRedoPanel.hpp
+    src/Widgets/VirtualPanel.hpp
 )
 
 # osccore: target properties
