--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "third_party/SDL"]
 	path = third_party/SDL
 	url = https://github.com/ComputationalBiomechanicsLab/SDL
+[submodule "third_party/span-lite"]
+	path = third_party/span-lite
+	url = https://github.com/ComputationalBiomechanicsLab/span-lite
