--- a/.gitmodules
+++ b/.gitmodules
@@ -37,3 +37,6 @@
 [submodule "third_party/robin-hood-hashing"]
 	path = third_party/robin-hood-hashing
 	url = https://github.com/ComputationalBiomechanicsLab/robin-hood-hashing
+[submodule "third_party/opensim-core"]
+	path = third_party/opensim-core
+	url = https://github.com/ComputationalBiomechanicsLab/opensim-core
