Added app singleton method and removed app references from Bindings/

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -503,6 +503,7 @@ add_library(osccore STATIC
     src/Platform/os.hpp
     src/Platform/RecentFile.hpp
     src/Platform/Styling.hpp
+    src/Platform/ValueHolder.hpp
 
     src/Screens/CookiecutterScreen.cpp
     src/Screens/CookiecutterScreen.hpp
