Began implementing shadow mapping tab (#10)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -545,6 +545,8 @@ add_library(osccore STATIC
     src/Tabs/Experiments/RendererMultipleLightsTab.hpp
     src/Tabs/Experiments/RendererSDFTab.cpp
     src/Tabs/Experiments/RendererSDFTab.hpp
+    src/Tabs/Experiments/RendererShadowMappingTab.cpp
+    src/Tabs/Experiments/RendererShadowMappingTab.hpp
     src/Tabs/Experiments/RendererTexturingTab.cpp
     src/Tabs/Experiments/RendererTexturingTab.hpp
     src/Tabs/CookiecutterTab.cpp
