Refactored ToggleablePanel(s) into their own headers (#467)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -611,6 +611,11 @@ add_library(osccore STATIC
     src/Widgets/StandardPanel.hpp
     src/Widgets/StandardPopup.cpp
     src/Widgets/StandardPopup.hpp
+    src/Widgets/ToggleablePanel.cpp
+    src/Widgets/ToggleablePanel.hpp
+    src/Widgets/ToggleablePanelFlags.hpp
+    src/Widgets/ToggleablePanels.cpp
+    src/Widgets/ToggleablePanels.hpp
     src/Widgets/UndoButton.cpp
     src/Widgets/UndoButton.hpp
     src/Widgets/UndoRedoPanel.cpp
