Stubbed out a frame definition tab (#490)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -370,6 +370,8 @@ add_library(osccore STATIC
     src/OpenSimBindings/MiddlewareAPIs/SimulatorUIAPI.hpp
     src/OpenSimBindings/Screens/MainUIScreen.cpp
     src/OpenSimBindings/Screens/MainUIScreen.hpp
+    src/OpenSimBindings/Tabs/Experimental/FrameDefinitionTab.cpp
+    src/OpenSimBindings/Tabs/Experimental/FrameDefinitionTab.hpp
     src/OpenSimBindings/Tabs/Experimental/MeshHittestTab.cpp
     src/OpenSimBindings/Tabs/Experimental/MeshHittestTab.hpp
     src/OpenSimBindings/Tabs/Experimental/ModelWarpingTab.cpp
