--- a/.gitmodules
+++ b/.gitmodules
@@ -40,3 +40,6 @@
 [submodule "third_party/opensim-core"]
 	path = third_party/opensim-core
 	url = https://github.com/ComputationalBiomechanicsLab/opensim-core
+[submodule "third_party/lunasvg"]
+	path = third_party/lunasvg
+	url = https://github.com/sammycage/lunasvg
